// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CrossComponentSourceViewer correctly 1`] = `
<ContextProvider
  value={
    {
      "registerPrimaryLocationRef": [Function],
      "registerSelectedSecondaryLocationRef": [Function],
    }
  }
>
  <CrossComponentSourceViewer
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    issue={
      {
        "actions": [],
        "component": "main.js",
        "componentEnabled": true,
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": [
          [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 12,
                "endOffset": 2,
                "startLine": 10,
                "startOffset": 1,
              },
            },
          ],
        ],
        "flowsWithType": [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": [
          {
            "component": "main.js",
            "index": 0,
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
          {
            "component": "main.js",
            "index": 1,
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": [],
        "type": "BUG",
      }
    }
    issues={
      [
        {
          "actions": [],
          "component": "main.js",
          "componentEnabled": true,
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": [
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "flowsWithType": [],
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": [],
          "type": "BUG",
        },
      ]
    }
    locations={
      [
        {
          "component": "main.js",
          "index": 0,
          "textRange": {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
        {
          "component": "main.js",
          "index": 1,
          "textRange": {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
      ]
    }
    onIssueSelect={[MockFunction]}
    onLocationSelect={[MockFunction]}
  />
</ContextProvider>
`;

exports[`should render SourceViewer correctly: all secondary locations on same line 1`] = `
<ContextProvider
  value={
    {
      "registerPrimaryLocationRef": [Function],
      "registerSelectedSecondaryLocationRef": [Function],
    }
  }
>
  <CrossComponentSourceViewer
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    issue={
      {
        "actions": [],
        "component": "main.js",
        "componentEnabled": true,
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": [
          [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
        ],
        "flowsWithType": [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": [
          {
            "component": "main.js",
            "index": 0,
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
          {
            "component": "main.js",
            "index": 1,
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": [],
        "type": "BUG",
      }
    }
    issues={
      [
        {
          "actions": [],
          "component": "main.js",
          "componentEnabled": true,
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": [
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "flowsWithType": [],
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": [],
          "type": "BUG",
        },
      ]
    }
    locations={
      [
        {
          "component": "main.js",
          "index": 0,
          "textRange": {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
        {
          "component": "main.js",
          "index": 1,
          "textRange": {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
      ]
    }
    onIssueSelect={[MockFunction]}
    onLocationSelect={[MockFunction]}
  />
</ContextProvider>
`;

exports[`should render SourceViewer correctly: default 1`] = `
<ContextProvider
  value={
    {
      "registerPrimaryLocationRef": [Function],
      "registerSelectedSecondaryLocationRef": [Function],
    }
  }
>
  <CrossComponentSourceViewer
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    issue={
      {
        "actions": [],
        "component": "main.js",
        "componentEnabled": true,
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": [],
        "flowsWithType": [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": [],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": [],
        "type": "BUG",
      }
    }
    issues={
      [
        {
          "actions": [],
          "component": "main.js",
          "componentEnabled": true,
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": [],
          "flowsWithType": [],
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": [],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": [],
          "type": "BUG",
        },
      ]
    }
    locations={[]}
    onIssueSelect={[MockFunction]}
    onLocationSelect={[MockFunction]}
  />
</ContextProvider>
`;

exports[`should render SourceViewer correctly: single secondary location 1`] = `
<ContextProvider
  value={
    {
      "registerPrimaryLocationRef": [Function],
      "registerSelectedSecondaryLocationRef": [Function],
    }
  }
>
  <CrossComponentSourceViewer
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    issue={
      {
        "actions": [],
        "component": "main.js",
        "componentEnabled": true,
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": [
          [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
        ],
        "flowsWithType": [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": [
          {
            "component": "main.js",
            "index": 0,
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
          {
            "component": "main.js",
            "index": 1,
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": [],
        "type": "BUG",
      }
    }
    issues={
      [
        {
          "actions": [],
          "component": "main.js",
          "componentEnabled": true,
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": [
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "flowsWithType": [],
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": [],
          "type": "BUG",
        },
      ]
    }
    locations={
      [
        {
          "component": "main.js",
          "index": 0,
          "textRange": {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
        {
          "component": "main.js",
          "index": 1,
          "textRange": {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
      ]
    }
    onIssueSelect={[MockFunction]}
    onLocationSelect={[MockFunction]}
  />
</ContextProvider>
`;
